--- a/CCDATSCL_EXAM.ipynb
+++ b/CCDATSCL_EXAM.ipynb
@@ -583,7 +583,7 @@
         "\n",
         "Lead time tells us how long clients books their appointments ahead of the time, this gives us an insight of the client's behavior and adr, alongside other factors relating to the business, tells us exactly why this is the case.\n",
         "\n",
-        "Based on the results below, disregarding the outliers based on graph 0 which is from 400 onwards, the average lead time is 104 days, with an STD of 106. This meant that approximately 90% of clients books their appointment between 0 - 200 days ahead of time. This is also backed by the positive skew (Graph 1) which tells us that most of the lead time falls below the average which is 104. To further analyze this case, let's look at the histogram of lead time in Graph 1. Notice that most of the clients book a room within the day, let's call this 0 day bookings, this is obvious because the business is a hotel.\n",
+        "Based on the results below, disregarding the outliers based on graph 0 which is from 400 onwards, the average lead time is 104 days, with an STD of 106. This meant that approximately 90% of clients books their appointment between 0 - 200 days ahead of time. This is also backed by the left skew (Graph 1) which tells us that most of the lead time falls below the average which is 104. To further analyze this case, let's look at the histogram of lead time in Graph 1. Notice that most of the clients book a room within the day, let's call this 0 day bookings, this is obvious because the business is a hotel.\n",
         "\n",
         "What is more intriguing is that the average lead_time is still high, which meant that a lot of individuals (approximately 90%) books an appointment 0 - 200 days in advance. But why though?\n",
         "\n",
